# test-ci

./: .gitignore  .gitmodules  CMakeLists.txt  gtk.c  mingw.cmake.in  mingw.sh  test-ci.c
.github/workflows/: 00-release.yml  a.7z  build2.yml  cmake-multi-platform.yml  example.yaml  release.yml
